[gd_scene format=3 uid="uid://dabrp57wh5wx"]

[ext_resource type="Script" uid="uid://bod88tuq20bmh" path="res://scripts/flow/screens/RunResultScreen.gd" id="1_script"]

[node name="RunResultScreen" type="PanelContainer" unique_id=209135284]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -130.0
offset_right = 260.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1817805674]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1766749275]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RunResultLabel" type="Label" parent="MarginContainer/VBoxContainer" unique_id=2091945122]
layout_mode = 2
text = "-"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=1191441074]
layout_mode = 2
text = "새 런 시작"

[node name="ToMenuButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=854191001]
layout_mode = 2
text = "메인으로"
